--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
         .highlight {
             font-weight: 600;
         }
+            .logo-img {
+    height: 70px; /* cambia a 50px, 80px, 120px según quieras */
+    width: auto;
+}
     </style>
     </head>
     
@@ -132,7 +136,7 @@
         
         <header>
             <div class="logo">
-                <div class="logo-circle">CV</div>
+                <img class="logo-img" src="Logo Coeur visible.png" alt="Logo CoeurVisible">
                 <div>
                     <div style="font-weight:700; font-size:1.1rem;">CoeurVisible</div>
                     <div style="font-size:0.85rem;">Vivre pour comprendre l’invisible</div>
