--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
             align-items: center;
             gap: 12px;
         }
-
+/* ⭐ AGREGA ESTO AQUÍ */
+.logo-img {
+    height: 70px;    /* Cambia el tamaño aquí */
+    width: auto;
+    border-radius: 12px; /* Bordes suaves */
+            
         .logo-circle {
             width: 50px;
             height: 50px;
