--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
         }
 /* ⭐ AGREGA ESTO AQUÍ */
 .logo-img {
-    height: 70px;    /* Cambia el tamaño aquí */
-    width: auto;
-    border-radius: 12px; /* Bordes suaves */
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    object-fit: cover;
+}
             
         .logo-circle {
             width: 50px;
