--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         
         <header>
             <div class="logo">
-                <div class="logo-circle">CV</div>
+                <img class="logo-img" src="Logo Coeur visible.png" alt="Logo CoeurVisible">
                 <div>
                     <div style="font-weight:700; font-size:1.1rem;">CoeurVisible</div>
                     <div style="font-size:0.85rem;">Vivre pour comprendre l’invisible</div>
