--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
             align-items: center;
             gap: 12px;
         }
-
+.logo-img {
+    width: 65px;
+    height: 65px;
+    border-radius: 50%;
+    object-fit: cover;
+    
         .logo-circle {
             width: 50px;
             height: 50px;
@@ -132,7 +137,7 @@
         
         <header>
     <div class="logo">
-        <img class="logo-img" src="Logo Coeur visible.png" alt="Logo Coeur Visible">
+      <img class="logo-img" src="Logo Coeur visible.png" alt="Logo CoeurVisible">
         <div>
             <div style="font-weight:700; font-size:1.1rem;">Coeur Visible</div>
             <div style="font-size:0.85rem;">Vivre pour comprendre l’invisible</div>
