--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <style>
         :root {
-            --yellow: #ffd94a;
-            --yellow-soft: #fff4bf;
+            --yellow: #f6a24f;       
+            --yellow-soft: #ffe5c7;
             --orange: #f46a4e;
             --blue: #23406a;
             --bg: #f5f7fb;
