--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <style>
         :root {
-            --yellow: #f6a24f;       
-            --yellow-soft: #ffe5c7;
+         --yellow: #f7a66c;       /* naranja claro */
+--yellow-soft: #fde3d1;
             --orange: #f46a4e;
             --blue: #23406a;
             --bg: #f5f7fb;
