--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         <div class="hero-visual">
             <div class="hero-illustration">
                 <!-- si quieres, aquí puedes poner una ilustración tipo Petite Mu -->
-                <img src="visuel-handicap-invisible.png" alt="Illustration handicaps invisibles" />
+                <img src="Seminario.jpg" alt="Illustration handicaps invisibles" />
                 <div>Un séminaire immersif pour changer les regards au sein de vos équipes.</div>
             </div>
         </div>
