--- a/index.html
+++ b/index.html
@@ -168,11 +168,13 @@
         }
 
         .hero-illustration img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 0 auto 10px;
-        }
+    width: 100%;
+    max-height: 180px;  /* AGRANDA controladamente la imagen */
+    object-fit: cover;  /* recorte elegante sin deformar */
+    border-radius: 16px;
+    margin-bottom: 12px;
+}
+
 
         /* MAIN LAYOUT */
 
