--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 <header>
     <div class="brand">
         <!-- Cambia la ruta por el nombre real de tu archivo de logo -->
-        <img src="logo-coeur-visible.png" alt="Logo CœurVisible" />
+       <img src="Logo Coeur visible.png" alt="Logo CœurVisible" />
         <div>
             <div class="brand-text-title">CœurVisible</div>
             <div class="brand-text-sub">Sensibiliser aux handicaps invisibles au travail</div>
