--- a/index.html
+++ b/index.html
@@ -24,7 +24,46 @@
             background: var(--bg);
             color: #222;
         }
+.approach-grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 24px;
+        margin-top: 24px;
+    }
 
+    .approach-card {
+        background: #ffffff;
+        border-radius: 18px;
+        box-shadow: 0 8px 20px rgba(0,0,0,0.07);
+        padding: 18px 20px;
+        text-align: left;
+        font-size: 0.95rem;
+        line-height: 1.5;
+    }
+
+    .approach-card img {
+        width: 100%;
+        height: 180px;
+        object-fit: cover;
+        border-radius: 12px;
+        margin-bottom: 10px;
+    }
+
+    .approach-card h3 {
+        margin: 0 0 8px;
+        color: #1f3b57;
+        font-size: 1.1rem;
+    }
+
+    @media (max-width: 900px) {
+        .approach-grid {
+            grid-template-columns: 1fr;
+        }
+    }
+
+
+
+        
         /* HEADER + NAV */
 
         header {
