--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
         <div class="approach-grid">
 
     <div class="approach-card">
-        <img src="cognitive.jpg" alt="Mises en situation" />
+        <img src="congnitive.jpg" alt="Mises en situation" />
         <h3>Mises en situation</h3>
         <p>
             Pour ressentir l’impact des douleurs, troubles sensoriels ou cognitifs sur le travail 
