--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         /* HERO */
 
         .hero {
-            background: var(--yellow);
+           background: linear-gradient(135deg, #f35a4b, #f39b5a);
             padding: 50px 8% 60px;
         }
 
