--- a/index.html
+++ b/index.html
@@ -67,15 +67,16 @@
         /* HEADER + NAV */
 
         header {
-            background: var(--yellow);
-            padding: 16px 8%;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            position: sticky;
-            top: 0;
-            z-index: 20;
-        }
+    background: white;
+    padding: 16px 8%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    box-shadow: 0 2px 12px rgba(0,0,0,0.06);
+}
 
         .brand {
             display: flex;
