--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
         </div>
 
         <div class="hero-visual">
-            <div class="hero-illustration">
+            <div class="hero-card">
                 <!-- si quieres, aquí puedes poner una ilustración tipo Petite Mu -->
                 <img src="Seminario.jpg" alt="Illustration handicaps invisibles" />
             
