--- a/index.html
+++ b/index.html
@@ -140,7 +140,24 @@
             line-height: 1.6;
             max-width: 560px;
         }
+/* TARJETA BLANCA COMO LA LANDING VR */
+.hero-card {
+    background: white;
+    padding: 22px;
+    border-radius: 32px;
+    box-shadow: 0 18px 40px rgba(0,0,0,0.12);
+    max-width: 520px;
+    margin-left: auto;
+    margin-right: 0;
+}
 
+/* IMAGEN DENTRO DE LA TARJETA */
+.hero-card img {
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+    display: block;
+}
         .hero-tagline {
             display: inline-block;
             margin-top: 18px;
