--- a/index.html
+++ b/index.html
@@ -224,14 +224,14 @@
             color: #555;
         }
 
- .hero-illustration img {
+ /* .hero-illustration img {
     width: 100%;
-    max-width: 520px;    /* AGRANDA la imagen */
-    height: auto;        /* evita deformaciones */
-    object-fit: cover;   /* por si necesitas recorte suave */
-    border-radius: 20px; /* más elegante */
+    max-width: 520px;
+    height: auto;
+    object-fit: cover;
+    border-radius: 20px;
     margin-bottom: 12px;
-}
+} */
 
 
 
